# openai-cpa

./: .gitignore  LICENSE  README.md  SYSTEM.md  config.example.yaml  config.yaml  docker-compose.yml  docker-compose2.yml  global_state.py  index.html  pyproject.toml  requirements.txt  stop_openai_cpa.ps1  wfxl_openai_regst.py
.github/workflows/: docker-build.yml  release.yml
deploy/systemd/: opaire-disk-cleanup.service  opaire-disk-cleanup.timer
routers/: account_routes.py  api_routes.py  browser_monitor_routes.py  cdk_routes.py  service_routes.py  sms_routes.py  system_routes.py
scripts/: _remote_exec.py  _remote_put.py  server_disk_cleanup.sh
static/: edge_monitor.html
static/css/: edge-monitor.css  index.css  style.css
static/js/: app.js  edge-monitor.js
tests/: test_browser_request_recorder.py  test_cluster_sync_tasks_route.py  test_cluster_upload_accounts_route.py  test_fivesim_fail_closed.py  test_get_all_accounts_with_token.py  test_hero_sms_country_retry.py  test_local_microsoft_service_abuse_mode.py  test_mail_service_abuse_mode.py  test_memory_predictor.py  test_raw_proxy_pool.py  test_reg_engine_executor_cleanup.py  test_sub2api_proxy_pool.py  test_system_maintenance.py
utils/: auth_core.pyd  browser_request_recorder.py  cdk_engine.py  clash_group_utils.py  config.py  core_engine.py  db_manager.py  local_auth_core.py  luckmail_service.py  mail_service.py  memory_predictor.py  proxy_manager.py  register.py  system_maintenance.py
utils/auth_pipeline/: common.py  http_utils.py  register.py
utils/email_providers/: beeinbox_service.py  (+9 more)
(+6 files in other folders)
